src/rtapi/ring.h


typedef __s32 ring_size_t;
typedef struct {
    size_t tail __attribute__((aligned(16)));
    __u8 scratchpad_buf[0];  
} ringtrailer_t;
#define RINGTYPE_RECORD    0
#define RINGTYPE_MULTIPART RTAPI_BIT(0)
#define RINGTYPE_STREAM    RTAPI_BIT(1)
#define RINGTYPE_MASK      (RTAPI_BIT(0)|RTAPI_BIT(1))
#define USE_RMUTEX       RTAPI_BIT(2)
#define USE_WMUTEX       RTAPI_BIT(3)
#define ALLOC_HALMEM     RTAPI_BIT(4)
typedef struct {
    __u8    type       : 2;  
    __u8    use_rmutex : 1;  
    __u8    use_wmutex : 1;  
    __u8    alloc_halmem : 1;
    __u32   userflags : 27;  
    __s32   refcount;        
    __s32   reader, writer;  
    __s32   reader_instance, writer_instance; 
    rtapi_atomic_type rmutex, wmutex; 
    size_t  trailer_size;   
    size_t  size_mask;      
    size_t  size;           
    size_t  head __attribute__((aligned(16)));
    __u64   generation;
    __u8    buf[0];         
} ringheader_t;
typedef struct {
    __s32           magic;
    ringheader_t   *header;
    ringtrailer_t  *trailer;
    __u8           *buf;
    void           *scratchpad;
} ringbuffer_t;
static inline int ringbuffer_attached(ringbuffer_t *rb)
{
    return (rb->magic == RINGBUFFER_MAGIC);
}
typedef struct {
    const ringbuffer_t *ring;
    __u64   generation;
    size_t offset;
} ringiter_t;
typedef struct {
    const void *rv_base;
    size_t      rv_len;
    __u32       rv_flags; 
} ringvec_t;
static inline ring_size_t size_aligned(const ring_size_t x)
{
    return x + (-x & (RB_ALIGN - 1));
}
static inline size_t ring_memsize(int flags, size_t size, size_t  sp_size)
{
    return sizeof(ringheader_t) +
	ring_storage_alloc(flags,  size) +
	ring_trailer_alloc(sp_size);
}
static inline int ring_refcount(ringheader_t *ringheader)
{
    return ringheader->refcount;
}
static inline size_t ring_scratchpad_size(ringbuffer_t *ring)
{
    return ring->header->trailer_size - sizeof(ringtrailer_t);
}
static inline void ringheader_init(ringheader_t *ringheader, int flags,
					 size_t size, size_t  sp_size)
{
    ringtrailer_t *t;
    ringheader->size = ring_storage_alloc(flags,size);
    ringheader->trailer_size = ring_trailer_alloc(sp_size);
    ringheader->rmutex = ringheader->wmutex = 0;
    ringheader->reader = ringheader->writer = 0;
    ringheader->reader_instance = ringheader->writer_instance = 0;
    ringheader->head = 0;
    t = _trailer_from_header(ringheader);
    t->tail = 0;
    ringheader->type = (flags & RINGTYPE_MASK);
    if (flags &  RINGTYPE_STREAM) {
	ringheader->size_mask = ringheader->size -1;
    } else {
	ringheader->generation = 0;
    }
    ringheader->refcount = 1;
}
static inline void ringbuffer_init(ringheader_t *ringheader, ringbuffer_t *ring)
{
    ring->header = ringheader;
    ring->trailer = _trailer_from_header(ringheader);
    ring->buf = &ringheader->buf[0];
    if (ring_scratchpad_size(ring))
	ring->scratchpad = ring->trailer->scratchpad_buf;
    else
	ring->scratchpad = NULL;
    ring->magic = RINGBUFFER_MAGIC;
}
static inline int record_write_begin(ringbuffer_t *ring, void ** data, size_t sz)
{
    size_t free;
    ringheader_t *h = ring->header;
    ringtrailer_t *t = ring->trailer;
    size_t a = size_aligned(sz + sizeof(ring_size_t));
    if (a > h->size)
	return ERANGE;
    free = (h->size + h->head - t->tail - 1) % h->size + 1; 
    if (free <= a) return EAGAIN;
    if (t->tail + a > h->size) {
	if (h->head <= a)
	    return EAGAIN;
	*data = _size_at(ring, 0) + 1;
	return 0;
    }
    *data = _size_at(ring, t->tail) + 1;
    return 0;
}
static inline int record_write_end(ringbuffer_t *ring, void * data, size_t sz)
{
    ringheader_t *h = ring->header;
    ringtrailer_t *t = ring->trailer;
    size_t a = size_aligned(sz + sizeof(ring_size_t));
    if (data == _size_at(ring, 0) + 1) {
	*_size_at(ring, t->tail) = -1;
	t->tail = 0;
    }
    *_size_at(ring, t->tail) = sz;
    rtapi_smp_wmb();
    t->tail = (t->tail + a) % h->size;
    return 0;
}
static inline int record_write(ringbuffer_t *ring, void * data, size_t sz)
{
    void * ptr;
    int r = record_write_begin(ring, &ptr, sz);
    if (r) return r;
    memmove(ptr, data, sz);
    return record_write_end(ring, ptr, sz);
}
static inline int record_read(const ringbuffer_t *ring,  const void **data, size_t *size)
{
    return _ring_read_at(ring, ring->header->head, data, size);
}
static inline const void *record_next(ringbuffer_t *ring)
{
    const void *data;
    size_t size;
    if (record_read(ring, &data, &size)) return 0;
    return data;
}
static inline ring_size_t record_next_size(ringbuffer_t *ring)
{
    const void *data;
    size_t size;
    if (record_read(ring, &data, &size)) return -1;
    return size;
}
static inline size_t record_write_space(const ringheader_t *h)
{
    int avail = 0;
    ringtrailer_t *t =  _trailer_from_header(h);
    if (t->tail < h->head)
        avail = h->head - t->tail;
    else
        avail = MAXIMUM(h->head, h->size - t->tail);
    return MAXIMUM(0, avail - (2 * RB_ALIGN));
}
static inline int record_shift(ringbuffer_t *ring)
{
    ring_size_t off = _ring_shift_offset(ring, ring->header->head);
    if (off < 0) return EAGAIN;
    ring->header->generation++;
    ring->header->head = off;
    return 0;
}
static inline int record_flush(ringbuffer_t *ring)
{
    int count = 0;
    while (!record_shift(ring))
	count++;
    return count;
}
static inline int record_iter_init(const ringbuffer_t *ring,
				       ringiter_t *iter)
{
    iter->ring = ring;
    iter->generation = ring->header->generation;
    iter->offset = ring->header->head;
    if (ring->header->generation != iter->generation)
        return EAGAIN;
    return 0;
}
static inline int record_iter_invalid(const ringiter_t *iter)
{
    if (iter->ring->header->generation > iter->generation)
        return EINVAL;
    return 0;
}
static inline int record_iter_shift(ringiter_t *iter)
{
    ring_size_t off;
    if (record_iter_invalid(iter)) return EINVAL;
    off = _ring_shift_offset(iter->ring, iter->offset);
    if (off < 0) return EAGAIN;
    iter->generation++;
    iter->offset = off;
    return 0;
}
static inline int record_iter_read(const ringiter_t *iter,
				   const void **data, size_t *size)
{
    if (record_iter_invalid(iter)) return EINVAL;
    return _ring_read_at(iter->ring, iter->offset, data, size);
}
static inline int ring_isstream(ringbuffer_t *ring)
{
    return (ring->header->type == RINGTYPE_STREAM);
}
static inline int ring_ismultipart(ringbuffer_t *ring)
{
    return (ring->header->type == RINGTYPE_MULTIPART);
}
static inline int ring_use_wmutex(ringbuffer_t *ring)
{
    return ring->header->use_wmutex ;
}
static inline int ring_use_rmutex(ringbuffer_t *ring)
{
    return ring->header->use_rmutex;
}
static inline size_t stream_get_read_vector(const ringbuffer_t *ring,
				ringvec_t *vec)
{
    size_t free_cnt;
    size_t cnt2;
    size_t w, r;
    ringheader_t *h = ring->header;
    ringtrailer_t *t = ring->trailer;
    w = t->tail;
    r = h->head;
    if (w > r) {
	free_cnt = w - r;
    } else {
	free_cnt = (w - r + h->size) & h->size_mask;
    }
    cnt2 = r + free_cnt;
    if (cnt2 > h->size) {
	vec[0].rv_base = (void *) &(ring->buf[r]);
	vec[0].rv_len = h->size - r;
	vec[1].rv_base = (void *) ring->buf;
	vec[1].rv_len = cnt2 & h->size_mask;
    } else {
	vec[0].rv_base = (void *) &(ring->buf[r]);
	vec[0].rv_len = free_cnt;
	vec[1].rv_len = 0;
	vec[1].rv_base = NULL;
    }
    return vec[0].rv_len + vec[1].rv_len;
}
static inline void stream_get_write_vector(const ringbuffer_t *ring,
				 ringvec_t *vec)
{
    size_t free_cnt;
    size_t cnt2;
    size_t w, r;
    ringheader_t *h = ring->header;
    ringtrailer_t *t = ring->trailer;
    w = t->tail;
    r = h->head;
    if (w > r) {
	free_cnt = ((r - w + h->size) & h->size_mask) - 1;
    } else if (w < r) {
	free_cnt = (r - w) - 1;
    } else {
	free_cnt = h->size - 1;
    }
    cnt2 = w + free_cnt;
    if (cnt2 > h->size) {
	vec[0].rv_base = (void *) &(ring->buf[w]);
	vec[0].rv_len = h->size - w;
	vec[1].rv_base = (void *) ring->buf;
	vec[1].rv_len = cnt2 & h->size_mask;
    } else {
	vec[0].rv_base = (void *) &(ring->buf[w]);
	vec[0].rv_len = free_cnt;
	vec[1].rv_len = 0;
    }
    if (free_cnt)
	rtapi_smp_mb();
}
static inline size_t stream_read_space(const ringheader_t *h)
{
    size_t w, r;
    ringtrailer_t *t =  _trailer_from_header(h);
    w = t->tail;
    r = h->head;
    if (w > r) {
	return w - r;
    } else {
	return (w - r + h->size) & h->size_mask;
    }
}
static inline size_t stream_read(ringbuffer_t *ring, char *dest, size_t cnt)
{
    size_t free_cnt;
    size_t cnt2;
    size_t to_read;
    size_t n1, n2;
    ringheader_t *h = ring->header;
    if ((free_cnt = stream_read_space (h)) == 0) {
	return 0;
    }
    to_read = cnt > free_cnt ? free_cnt : cnt;
    cnt2 = h->head + to_read;
    if (cnt2 > h->size) {
	n1 = h->size - h->head;
	n2 = cnt2 & h->size_mask;
    } else {
	n1 = to_read;
	n2 = 0;
    }
    memcpy (dest, &(ring->buf[h->head]), n1);
    h->head = (h->head + n1) & h->size_mask;
    if (n2) {
	memcpy (dest + n1, &(ring->buf[h->head]), n2);
	h->head = (h->head + n2) & h->size_mask;
    }
    return to_read;
}
static inline size_t stream_peek(ringbuffer_t *ring, char *dest, size_t cnt)
{
    size_t free_cnt;
    size_t cnt2;
    size_t to_read;
    size_t n1, n2;
    size_t tmp_head;
    ringheader_t *h = ring->header;
    tmp_head = h->head;
    if ((free_cnt = stream_read_space (h)) == 0) {
	return 0;
    }
    to_read = cnt > free_cnt ? free_cnt : cnt;
    cnt2 = tmp_head + to_read;
    if (cnt2 > h->size) {
	n1 = h->size - tmp_head;
	n2 = cnt2 & h->size_mask;
    } else {
	n1 = to_read;
	n2 = 0;
    }
    memcpy (dest, &(ring->buf[tmp_head]), n1);
    tmp_head = (tmp_head + n1) & h->size_mask;
    if (n2) {
	memcpy (dest + n1, &(ring->buf[tmp_head]), n2);
    }
    return to_read;
}
static inline void stream_read_advance(ringbuffer_t *ring, size_t cnt)
{
    size_t tmp;
    ringheader_t *h = ring->header;
    rtapi_smp_mb();
    tmp = (h->head + cnt) & h->size_mask;
    h->head = tmp;
}
static inline size_t stream_flush(ringbuffer_t *ring)
{
    size_t left = stream_read_space(ring->header);
    if (left > 0)
	stream_read_advance(ring, left);
    return left;
}
static inline size_t stream_write_space(const ringheader_t *h)
{
    size_t w, r;
    ringtrailer_t *t =  _trailer_from_header(h);
    w = t->tail;
    r = h->head;
    if (w > r) {
	return ((r - w + h->size) & h->size_mask) - 1;
    } else if (w < r) {
	return (r - w) - 1;
    } else {
	return h->size - 1;
    }
}
static inline size_t stream_write(ringbuffer_t *ring, const char *src,
			size_t cnt)
{
    size_t free_cnt;
    size_t cnt2;
    size_t to_write;
    size_t n1, n2;
    ringheader_t *h = ring->header;
    ringtrailer_t *t = ring->trailer;
    if ((free_cnt = stream_write_space (h)) == 0) {
	return 0;
    }
    to_write = cnt > free_cnt ? free_cnt : cnt;
    cnt2 = t->tail + to_write;
    if (cnt2 > h->size) {
	n1 = h->size - t->tail;
	n2 = cnt2 & h->size_mask;
    } else {
	n1 = to_write;
	n2 = 0;
    }
    memcpy (&(ring->buf[t->tail]), src, n1);
    t->tail = (t->tail + n1) & h->size_mask;
    if (n2) {
	memcpy (&(ring->buf[t->tail]), src + n1, n2);
	t->tail = (t->tail + n2) & h->size_mask;
    }
    return to_write;
}
static inline void stream_write_advance(ringbuffer_t *ring, size_t cnt)
{
    size_t tmp;
    ringheader_t *h = ring->header;
    ringtrailer_t *t = ring->trailer;
    rtapi_smp_wmb();
    tmp = (t->tail + cnt) & h->size_mask;
    t->tail = tmp;
}