src/rtapi/multiframe.h

typedef struct {
    ringbuffer_t *ring;
    void * _write;      
    ringsize_t write_size;
    ringsize_t write_off;
    const void * _read;
    ringsize_t read_size;
    ringsize_t read_off;
} msgbuffer_t;
typedef struct {
    __s32 size;
    __u32 flags;
    __u8  data[0];  
} frameheader_t;
static inline int msgbuffer_init(msgbuffer_t *mb, ringbuffer_t *ring)
{
    memset(mb, 0, sizeof(msgbuffer_t));
    mb->ring = ring;
    return 0;
}
static inline int frame_write_begin(msgbuffer_t *mb,
				    void ** data,
				    ringsize_t size, __u32 flags)
{
    const ringsize_t sz = size + sizeof(frameheader_t);
    if (!mb->_write) {
	int r = record_write_begin(mb->ring, &mb->_write, sz);
	if (r) return r;
	mb->write_size = sz;
	mb->write_off = 0;
    }
    frameheader_t * frame = (frameheader_t *) ((unsigned char *)mb->_write + mb->write_off);
    if (mb->write_size < mb->write_off + sizeof(frameheader_t) + size) {
	const void * old = mb->_write;
	int r = record_write_begin(mb->ring, &mb->_write, mb->write_off + sz);
	if (r) return r;
	if (old != mb->_write)
	    memmove(mb->_write, old, mb->write_off);
	mb->write_size = mb->write_off + sz;
    }
    frame->size = size;
    frame->flags = flags;
    *data = frame->data; 
    return 0;
}
static inline int frame_write_end(msgbuffer_t *mb, ringsize_t size)
{
    if (!mb->_write)
	return EINVAL;
    frameheader_t * frame = (frameheader_t *) mb->_write +  mb->write_off;
    frame->size = size;
    mb->write_off = mb->write_off + sizeof(*frame) + frame->size;
    return 0;
}
static inline int frame_write(msgbuffer_t *mb, const void * data, ringsize_t size, __u32 flags)
{
    void * ptr;
    int r = frame_write_begin(mb, &ptr, size, flags);
    if (r) return r;
    memmove(ptr, data, size);
    return frame_write_end(mb, size);
}
static inline int frame_writev(msgbuffer_t *mb, ringvec_t *rv)
{
    return frame_write(mb, rv->rv_base, rv->rv_len, rv->rv_flags);
}
static inline int msg_write_flush(msgbuffer_t *mb)
{
    int r = record_write_end(mb->ring, mb->_write, mb->write_off);
    mb->_write = 0;
    return r;
}
static inline int msg_write_abort(msgbuffer_t *mb)
{
    mb->_write = 0;
    return 0;
}
static inline int frame_read(msgbuffer_t *mb,
			     const void ** data,
			     ringsize_t *size,
			     __u32 * flags)
{
    if (!mb->_read) {
	int r = record_read(mb->ring, &mb->_read, &mb->read_size);
	if (r) return r;
	mb->read_off = 0;
    }
    if (mb->read_off == mb->read_size)
	return EAGAIN; 
    const frameheader_t * frame = (frameheader_t *) ((unsigned char *)mb->_read + mb->read_off);
    *data = frame + 1;
    *size = frame->size;
    *flags = frame->flags;
    return 0;
}
static inline int frame_readv(msgbuffer_t *mb, ringvec_t *rv)
{
    return frame_read(mb, &rv->rv_base, &rv->rv_len, &rv->rv_flags);
}
static inline int frame_shift(msgbuffer_t *mb)
{
    if (!mb->_read || mb->read_off == mb->read_size) return EINVAL;
    const frameheader_t * frame = (frameheader_t *) ((unsigned char *)mb->_read + mb->read_off);
    mb->read_off += sizeof(*frame) + frame->size;
    return 0;
}
static inline int msg_read_flush(msgbuffer_t *mb)
{
    if (!mb->_read) return EINVAL;
    mb->_read = 0;
    return record_shift(mb->ring);
}
static inline int msg_read_abort(msgbuffer_t *mb)
{
    if (!mb->_read) return EINVAL;
    mb->_read = 0;
    return 0;
}